# astaroth

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENCE.txt  README.md  bitbucket-pipelines.yml  doxyfile  sourceme.sh
acc/: CMakeLists.txt  README.md  build_acc.sh  clean.sh  compile.sh  preprocess.sh  test_grammar.sh
acc/accrevision/: stencil_kernel.ac
acc/hydro_solver/: stencil_defines.h
acc/magnetic_solver/: stencil_defines.h
acc/mhd_solver/: .gitignore  pcstyleforcing.h  stencil_assembly.h  stencil_assembly.sas  stencil_defines.h  stencil_definition.h  stencil_definition.sdh  stencil_kernel.ac  stencil_process.ac  stencil_process.sps
acc/mhd_solver_DEPRECATED/: stencil_definition.sdh  stencil_process.sps
acc/pc_mhd_solver/: stencil_definition.sdh  stencil_process.sps
acc/pseudodisk/: stencil_process_gravx.sps  stencil_process_isotherm_gravx.sps  stencil_process_isotherm_linegrav.sps  stencil_process_linegrav.sps
acc/samples/: common_header.h  sample_stencil_assembly.sas  sample_stencil_process.sps
acc/src/: CMakeLists.txt  acc.l  acc.y  ast.h  code_generator.c  code_generator0.c
acc/stdlib/: stdderiv.h
acc/test_solver/: stencil_assembly.sas  stencil_definition.sdh  stencil_process.sps
analysis/python/: README.md  add_to_pythonpath.sh
analysis/python/astar/: __init__.py
analysis/python/astar/data/: __init__.py  read.py
analysis/python/astar/visual/: __init__.py  lineplot.py  slices.py
analysis/python/calc/: convert.sh  galli_shu_plotter.py  shu_selfsim.py
analysis/python/jupyter/: README.md  notebook_example.ipynb
analysis/python/samples/: README.md  lnrhobound.py  readtest.py
config/: astaroth.conf  astaroth_pseudodisk.conf
config/templates/: core_collapse.conf  sinktest.conf  six_hour_stable.conf
config/templates/sink_aftersummer/: 128_basic_rotating.conf
config/templates/sinktest/: 128res_non-rotating_highvisc.conf  256res_non-rotating_highvisc.conf  256res_rotating_highvisc.conf  256res_rotating_lowvisc.conf  512res_non-rotating_highvisc.conf  512res_rotating_highvisc.conf  512res_rotating_lowvisc.conf
ctest/: CMakeLists.txt  main.c
doc/: commitflowchart.drawio  testfile.txt
doc/Astaroth_API_specification_and_user_manual/: API_specification_and_user_manual.md  stencilpipeline.drawio
doc/manual/: convert.sh  manual.md  manual.txt  sink_particle.md
include/: .gitignore  astaroth.h  astaroth_defines.h  astaroth_device.h  astaroth_fortran.h  astaroth_grid.h  astaroth_node.h  astaroth_utils.h  user.h
samples/: CMakeLists.txt
samples/benchmark/: CMakeLists.txt  main.cc
samples/bwtest/: CMakeLists.txt  main.c
samples/cpptest/: CMakeLists.txt  main.cc
samples/ctest/: CMakeLists.txt  main.c
samples/exampleproject/: CMakeLists.txt
samples/fortrantest/: CMakeLists.txt  main.f90
samples/genbenchmarkscripts/: CMakeLists.txt  main.c
samples/genbenchmarkscripts/genbenchmarkscripts/: main.c
samples/mpi_reduce_bench/: CMakeLists.txt  main.cc  mpibench.sh
samples/mpitest/: CMakeLists.txt  README.txt  main.cc  main1.c  main_old.cc
samples/standalone/: autotest.cc  benchmark.cc  renderer.cc  simulation.cc
samples/standalone/model/: host_forcing.cc  host_timestep.cc  host_timestep.h  model_boundconds.cc
samples/standalone_mpi/: CMakeLists.txt  config_loader.cc  host_forcing.cc  host_forcing.h  host_memory.cc  host_memory.h  main.cc
scripts/: ac_mkbuilddir.sh  auto_optimize.sh  autotest.sh  buildtest.sh  buildtestcases.sh  compile_acc.sh  compile_acc_module.sh  fix_style.sh  gen_rk3_threadblockconf.c  my_cmake.sh  postprocess_benchmarks.sh  preprocess_device_files.sh
src/common/: errchk.h  math_utils.h  timer_hires.h
src/core/: CMakeLists.txt  astaroth.cc  astaroth.cu  astaroth_fortran.cc  astaroth_fortran.h  device.cc  device.cu  device.cuh  errchk.h  grid.cc  grid.cu  math_utils.h  node.cc  node.cu
src/core/kernels/: .gitignore  CMakeLists.txt  boundconds.cu  boundconds.cuh  common.cuh  integration.cu  integration.cuh  kernels.cu  kernels.cuh  kernels.h  packing.cu  packing.cuh  reduce_PLACEHOLDER.cuh  reductions.cu  reductions.cuh  rk3_PLACEHOLDER.cuh  stencil_header.hh
src/core/kernels/deprecated/: boundconds_PLACEHOLDER.cuh  reduce_PLACEHOLDER.cuh  rk3_PLACEHOLDER.cuh
src/ctest/: CMakeLists.txt  README.txt  main.c
src/exampleproject/: simulation.cc
src/mpitest/: CMakeLists.txt  main.c  main.cc  main0.c
src/standalone/: CMakeLists.txt  autotest.cc  benchmark.cc  config_loader.cc  config_loader.h  main.cc  renderer.cc  run.h  simulation.cc  timer_hires.h
src/standalone/model/: host_forcing.cc  host_forcing.h  host_memory.cc  host_memory.h  host_timestep.cc  host_timestep.h  model_boundconds.cc  model_boundconds.h  model_diff.h  model_reduce.cc  model_reduce.h  model_rk3.cc  model_rk3.h  modelmesh.h
src/utils/: CMakeLists.txt  config_loader.c  config_loader.h  memory.c  memory.h  modelreduce.c  modelsolver.c  modelsolver.h  timer_hires.h  verification.c  verification.h
